# tic-tak-toe-refresh

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SIMPLIFIED.md  ENV_SETUP.md  GAME_RULES.md  GETTING_STARTED.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  env.prod.example  healthcheck.sh  temp.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/models/: __init__.py  game.py
backend/app/services/: __init__.py  game_service.py  matchmaking_service.py
backend/app/websocket/: __init__.py  connection_manager.py  message_handler.py
backend/tests/: test_game.py
frontend/: .eslintrc.json  Dockerfile  Dockerfile.dev  README.md  nginx.conf  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.css  index.tsx
frontend/src/components/: Board.css  Board.tsx  GameInfo.css  GameInfo.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: game.ts
scripts/: backup.sh  setup-dev.sh  setup-prod.sh
traefik/: .gitkeep  config.yml  traefik.yml
