[project]
name = "vanishing-tic-tac-toe-backend"
version = "0.1.0"
description = "Backend for Vanishing Tic-Tac-Toe game"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "websockets==13.1",
    "pydantic==2.10.0",
    "pydantic-settings==2.6.0",
    "python-multipart==0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []

